@@ -6,3 +6,4 @@ toooting愉快！此版本包括以下改进和修复：
 - 新增暂停自动播放gif动画选项
 - 隐藏用户的转嘟
 - 下划线高亮正在关注的话题标签
+- 支持GoToSocial
